--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 
     <modules>
         <module>impl</module>
+        <module>examples</module>
     </modules>
 
     <properties>
@@ -35,6 +36,7 @@
 
         <java.version>1.8</java.version>
         <querydsl.version>4.1.4</querydsl.version>
+        <cassandra-driver.version>3.1.2</cassandra-driver.version>
     </properties>
 
     <dependencies>
@@ -57,7 +59,7 @@
         <dependency>
             <groupId>com.datastax.cassandra</groupId>
             <artifactId>cassandra-driver-core</artifactId>
-            <version>3.1.2</version>
+            <version>${cassandra-driver.version}</version>
         </dependency>
 
         <dependency>
